src/parsers/Declaration/ANTLRGenerated/uppaalParser.java
// Generated from uppaal.g4 by ANTLR 4.6

package parsers.Declaration.ANTLRGenerated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class uppaalParser extends Parser {
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, T__27 = 28, T__28 = 29, T__29 = 30, T__30 = 31,
            T__31 = 32, T__32 = 33, T__33 = 34, T__34 = 35, T__35 = 36, T__36 = 37, T__37 = 38,
            T__38 = 39, T__39 = 40, T__40 = 41, T__41 = 42, T__42 = 43, T__43 = 44, T__44 = 45,
            T__45 = 46, T__46 = 47, T__47 = 48, T__48 = 49, T__49 = 50, T__50 = 51, T__51 = 52,
            T__52 = 53, T__53 = 54, T__54 = 55, T__55 = 56, T__56 = 57, T__57 = 58, T__58 = 59,
            T__59 = 60, T__60 = 61, T__61 = 62, T__62 = 63, T__63 = 64, T__64 = 65, T__65 = 66,
            T__66 = 67, T__67 = 68, T__68 = 69, T__69 = 70, T__70 = 71, T__71 = 72, T__72 = 73,
            T__73 = 74, T__74 = 75, T__75 = 76, T__76 = 77, ID = 78, NAT = 79, FLOAT = 80, WS = 81,
            BLOCK_COMMENT = 82, LINE_COMMENT = 83, PATH = 84;
    public static final int
            RULE_xta = 0, RULE_declaration = 1, RULE_importDecl = 2, RULE_prototype = 3,
            RULE_instantiation = 4, RULE_systemBlock = 5, RULE_system = 6, RULE_parameterList = 7,
            RULE_parameter = 8, RULE_functionDecl = 9, RULE_procDecl = 10, RULE_procBody = 11,
            RULE_states = 12, RULE_stateDecl = 13, RULE_commit = 14, RULE_urgent = 15,
            RULE_stateList = 16, RULE_init = 17, RULE_transitions = 18, RULE_transition = 19,
            RULE_transitionOpt = 20, RULE_transitionBody = 21, RULE_guard = 22, RULE_sync = 23,
            RULE_assign = 24, RULE_typeDecl = 25, RULE_typeIdList = 26, RULE_variableDecl = 27,
            RULE_declId = 28, RULE_initialiser = 29, RULE_fieldInit = 30, RULE_arrayDecl = 31,
            RULE_type = 32, RULE_fieldDecl = 33, RULE_fieldDeclId = 34, RULE_prefix = 35,
            RULE_range = 36, RULE_block = 37, RULE_statement = 38, RULE_caseExpr = 39,
            RULE_exprList = 40, RULE_expression = 41, RULE_argList = 42, RULE_assignOp = 43,
            RULE_unaryOp = 44, RULE_rel = 45, RULE_binIntOp = 46, RULE_binBoolOp = 47;
    public static final String[] ruleNames = {
            "xta", "declaration", "importDecl", "prototype", "instantiation", "systemBlock",
            "system", "parameterList", "parameter", "functionDecl", "procDecl", "procBody",
            "states", "stateDecl", "commit", "urgent", "stateList", "init", "transitions",
            "transition", "transitionOpt", "transitionBody", "guard", "sync", "assign",
            "typeDecl", "typeIdList", "variableDecl", "declId", "initialiser", "fieldInit",
            "arrayDecl", "type", "fieldDecl", "fieldDeclId", "prefix", "range", "block",
            "statement", "caseExpr", "exprList", "expression", "argList", "assignOp",
            "unaryOp", "rel", "binIntOp", "binBoolOp"
    };
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = {
            null, "'import'", "'\"'", "'{'", "'}'", "';'", "'='", "'('", "')'", "':='",
            "'system'", "','", "'<'", "'&'", "'process'", "'state'", "'commit'", "'urgent'",
            "'init'", "'trans'", "'-'", "'guard'", "'sync'", "'!'", "'?'", "'assign'",
            "'typedef'", "':'", "'['", "']'", "'struct'", "'broadcast'", "'const'",
            "'meta'", "'for'", "'while'", "'do'", "'if'", "'else'", "'break'", "'continue'",
            "'switch'", "'return'", "'case'", "'default'", "'true'", "'false'", "'++'",
            "'--'", "'.'", "'''", "'exists'", "'forall'", "'+='", "'-='", "'*='",
            "'/='", "'%='", "'|='", "'&='", "'^='", "'<<='", "'>>='", "'+'", "'<='",
            "'=='", "'!='", "'>='", "'>'", "'*'", "'/'", "'%'", "'|'", "'^'", "'<<'",
            "'>>'", "'&&'", "'||'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, "ID", "NAT", "FLOAT", "WS", "BLOCK_COMMENT",
            "LINE_COMMENT", "PATH"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public uppaalParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "uppaal.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final XtaContext xta() throws RecognitionException {
        XtaContext _localctx = new XtaContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_xta);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(99);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__13) | (1L << T__16) | (1L << T__25) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32))) != 0) || _la == ID) {
                    {
                        {
                            setState(96);
                            declaration();
                        }
                    }
                    setState(101);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(102);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DeclarationContext declaration() throws RecognitionException {
        DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_declaration);
        try {
            setState(109);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(104);
                    functionDecl();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(105);
                    variableDecl();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(106);
                    typeDecl();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(107);
                    procDecl();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(108);
                    importDecl();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ImportDeclContext importDecl() throws RecognitionException {
        ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_importDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(111);
                match(T__0);
                setState(112);
                match(T__1);
                setState(113);
                match(PATH);
                setState(114);
                match(T__1);
                setState(115);
                match(T__2);
                setState(117);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(116);
                            prototype();
                        }
                    }
                    setState(119);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (((((_la - 17)) & ~0x3f) == 0 && ((1L << (_la - 17)) & ((1L << (T__16 - 17)) | (1L << (T__29 - 17)) | (1L << (T__30 - 17)) | (1L << (T__31 - 17)) | (1L << (T__32 - 17)) | (1L << (ID - 17)))) != 0));
                setState(121);
                match(T__3);
                setState(122);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final PrototypeContext prototype() throws RecognitionException {
        PrototypeContext _localctx = new PrototypeContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_prototype);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                type();
                setState(125);
                match(ID);
                setState(126);
                parameterList();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InstantiationContext instantiation() throws RecognitionException {
        InstantiationContext _localctx = new InstantiationContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_instantiation);
        try {
            setState(144);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(128);
                    match(ID);
                    setState(129);
                    match(T__5);
                    setState(130);
                    match(ID);
                    setState(131);
                    match(T__6);
                    setState(132);
                    argList();
                    setState(133);
                    match(T__7);
                    setState(134);
                    match(T__4);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(136);
                    match(ID);
                    setState(137);
                    match(T__8);
                    setState(138);
                    match(ID);
                    setState(139);
                    match(T__6);
                    setState(140);
                    argList();
                    setState(141);
                    match(T__7);
                    setState(142);
                    match(T__4);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SystemBlockContext systemBlock() throws RecognitionException {
        SystemBlockContext _localctx = new SystemBlockContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_systemBlock);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(149);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ID) {
                    {
                        {
                            setState(146);
                            instantiation();
                        }
                    }
                    setState(151);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(152);
                system();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SystemContext system() throws RecognitionException {
        SystemContext _localctx = new SystemContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_system);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(154);
                match(T__9);
                setState(155);
                match(ID);
                setState(160);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10 || _la == T__11) {
                    {
                        {
                            setState(156);
                            _la = _input.LA(1);
                            if (!(_la == T__10 || _la == T__11)) {
                                _errHandler.recoverInline(this);
                            } else {
                                if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                _errHandler.reportMatch(this);
                                consume();
                            }
                            setState(157);
                            match(ID);
                        }
                    }
                    setState(162);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(163);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParameterListContext parameterList() throws RecognitionException {
        ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_parameterList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(165);
                match(T__6);
                setState(174);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (((((_la - 17)) & ~0x3f) == 0 && ((1L << (_la - 17)) & ((1L << (T__16 - 17)) | (1L << (T__29 - 17)) | (1L << (T__30 - 17)) | (1L << (T__31 - 17)) | (1L << (T__32 - 17)) | (1L << (ID - 17)))) != 0)) {
                    {
                        setState(166);
                        parameter();
                        setState(171);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == T__10) {
                            {
                                {
                                    setState(167);
                                    match(T__10);
                                    setState(168);
                                    parameter();
                                }
                            }
                            setState(173);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(176);
                match(T__7);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ParameterContext parameter() throws RecognitionException {
        ParameterContext _localctx = new ParameterContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_parameter);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(178);
                type();
                setState(180);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__12) {
                    {
                        setState(179);
                        match(T__12);
                    }
                }

                setState(182);
                match(ID);
                setState(186);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__27) {
                    {
                        {
                            setState(183);
                            arrayDecl();
                        }
                    }
                    setState(188);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FunctionDeclContext functionDecl() throws RecognitionException {
        FunctionDeclContext _localctx = new FunctionDeclContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_functionDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(189);
                type();
                setState(190);
                match(ID);
                setState(191);
                parameterList();
                setState(192);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ProcDeclContext procDecl() throws RecognitionException {
        ProcDeclContext _localctx = new ProcDeclContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_procDecl);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(194);
                match(T__13);
                setState(195);
                match(ID);
                setState(196);
                parameterList();
                setState(197);
                match(T__2);
                setState(198);
                procBody();
                setState(199);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ProcBodyContext procBody() throws RecognitionException {
        ProcBodyContext _localctx = new ProcBodyContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_procBody);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(206);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (((((_la - 17)) & ~0x3f) == 0 && ((1L << (_la - 17)) & ((1L << (T__16 - 17)) | (1L << (T__25 - 17)) | (1L << (T__29 - 17)) | (1L << (T__30 - 17)) | (1L << (T__31 - 17)) | (1L << (T__32 - 17)) | (1L << (ID - 17)))) != 0)) {
                    {
                        setState(204);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                            case 1: {
                                setState(201);
                                functionDecl();
                            }
                            break;
                            case 2: {
                                setState(202);
                                variableDecl();
                            }
                            break;
                            case 3: {
                                setState(203);
                                typeDecl();
                            }
                            break;
                        }
                    }
                    setState(208);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(209);
                states();
                setState(211);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__15) {
                    {
                        setState(210);
                        commit();
                    }
                }

                setState(214);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__16) {
                    {
                        setState(213);
                        urgent();
                    }
                }

                setState(216);
                init();
                setState(218);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__18) {
                    {
                        setState(217);
                        transitions();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatesContext states() throws RecognitionException {
        StatesContext _localctx = new StatesContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_states);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(220);
                match(T__14);
                setState(221);
                stateDecl();
                setState(226);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(222);
                            match(T__10);
                            setState(223);
                            stateDecl();
                        }
                    }
                    setState(228);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(229);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StateDeclContext stateDecl() throws RecognitionException {
        StateDeclContext _localctx = new StateDeclContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_stateDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(231);
                match(ID);
                setState(236);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__2) {
                    {
                        setState(232);
                        match(T__2);
                        setState(233);
                        expression(0);
                        setState(234);
                        match(T__3);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CommitContext commit() throws RecognitionException {
        CommitContext _localctx = new CommitContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_commit);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(238);
                match(T__15);
                setState(239);
                stateList();
                setState(240);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final UrgentContext urgent() throws RecognitionException {
        UrgentContext _localctx = new UrgentContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_urgent);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(242);
                match(T__16);
                setState(243);
                stateList();
                setState(244);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StateListContext stateList() throws RecognitionException {
        StateListContext _localctx = new StateListContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_stateList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(246);
                match(ID);
                setState(251);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(247);
                            match(T__10);
                            setState(248);
                            match(ID);
                        }
                    }
                    setState(253);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final InitContext init() throws RecognitionException {
        InitContext _localctx = new InitContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_init);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(254);
                match(T__17);
                setState(255);
                match(ID);
                setState(256);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TransitionsContext transitions() throws RecognitionException {
        TransitionsContext _localctx = new TransitionsContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_transitions);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(258);
                match(T__18);
                setState(259);
                transition();
                setState(264);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__10) {
                    {
                        {
                            setState(260);
                            match(T__10);
                            setState(261);
                            transitionOpt();
                        }
                    }
                    setState(266);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(267);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TransitionContext transition() throws RecognitionException {
        TransitionContext _localctx = new TransitionContext(_ctx, getState());
        enterRule(_localctx, 38, RULE_transition);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(269);
                match(ID);
                setState(270);
                match(T__19);
                setState(271);
                match(ID);
                setState(272);
                transitionBody();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TransitionOptContext transitionOpt() throws RecognitionException {
        TransitionOptContext _localctx = new TransitionOptContext(_ctx, getState());
        enterRule(_localctx, 40, RULE_transitionOpt);
        try {
            setState(278);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case ID:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(274);
                    transition();
                }
                break;
                case T__19:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(275);
                    match(T__19);
                    setState(276);
                    match(ID);
                    setState(277);
                    transitionBody();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final TransitionBodyContext transitionBody() throws RecognitionException {
        TransitionBodyContext _localctx = new TransitionBodyContext(_ctx, getState());
        enterRule(_localctx, 42, RULE_transitionBody);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(280);
                match(T__2);
                setState(282);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__20) {
                    {
                        setState(281);
                        guard();
                    }
                }

                setState(285);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__21) {
                    {
                        setState(284);
                        sync();
                    }
                }

                setState(288);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__24) {
                    {
                        setState(287);
                        assign();
                    }
                }

                setState(290);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final GuardContext guard() throws RecognitionException {
        GuardContext _localctx = new GuardContext(_ctx, getState());
        enterRule(_localctx, 44, RULE_guard);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(292);
                match(T__20);
                setState(293);
                expression(0);
                setState(294);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SyncContext sync() throws RecognitionException {
        SyncContext _localctx = new SyncContext(_ctx, getState());
        enterRule(_localctx, 46, RULE_sync);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(296);
                match(T__21);
                setState(297);
                expression(0);
                setState(298);
                _la = _input.LA(1);
                if (!(_la == T__22 || _la == T__23)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
                setState(299);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignContext assign() throws RecognitionException {
        AssignContext _localctx = new AssignContext(_ctx, getState());
        enterRule(_localctx, 48, RULE_assign);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(301);
                match(T__24);
                setState(302);
                exprList();
                setState(303);
                match(T__4);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
